# eretria

./: .gitmodules  Cargo.toml  README.md  build.rs  codecov.yml
.github/workflows/: coverage.yml
binaryen/: Cargo.toml  build.rs
binaryen/src/: lib.rs
src/: cli.rs  compiler.rs  lexer.rs  lib.rs  main.rs  operators.rs  parser.rs
tests/: assignment.er  call.er  expressions.rs  incomplete.rs  literals.rs  operations.er  parse_file.er  parse_file.rs  samples.rs  statements.rs  string.er
tests/samples/: data.er  operations.er
