[package]
name = "eretria"
version = "0.1.0"
authors = ["romdotdog <romdotdog@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eretria"
path = "src/lib.rs"

[[bin]]
name = "eretria-cli"
path = "src/cli.rs"

[dependencies]
logos = "0.12"
clap = "2.33"